--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="ai-africa"
+      content="Your Journey, Your Future: AI-Powered Support to Help You Discover the Right Career, Build Skills, and Achieve Your Goals One Step at a Time."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ai-africa</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      Your Journey, Your Future: AI-Powered Support to Help You Discover the Right Career, Build Skills, and Achieve Your Goals One Step at a Time.
+          </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
